--- a/app/views/brands/new.html.haml
+++ b/app/views/brands/new.html.haml
@@ -1,10 +1,7 @@
 %h1 Add brand
 
 - form_for @brand do |f|
-  %p
-    = f.label :name
-    %br
-    = f.text_field :name
+  = render :partial => 'fields', :locals => { :f => f }
 
   %p
     = f.submit 'Create'
