updating the about page content

--- a/app/views/pages/show/about.html.haml
+++ b/app/views/pages/show/about.html.haml
@@ -1,2 +1,33 @@
 .grid_12
   %h2 About Brandizzle
+  
+  %h4 What is Brandizzle?
+  
+  %p Brandizzle is a Social Brand Monitoring application that helps you search various social networks to keep track of what people are saying.  Currently Brandizzle supports twitter and google blog search.
+  
+  %h4 How does it work?
+  
+  %p You add a Brand.  This could be you, your company or your product, you get the idea.  Then you start adding search terms to watch out for, some ideas you might consider:
+  
+  %p For yourself:
+  %ul
+    %li Your name
+    %li Your online aliases (twitter account, IM names, etc)
+    %li Your web sites
+    
+  %p For your product
+  %ul
+    %li Product name
+    %li Product web site
+    %li Keywords (ex. kids party planning)
+    
+  %h4 Who's responsible for this?
+  
+  %p
+    = link_to 'Jeff Schoolcraft', 'http://twitter.com/jschoolcraft'
+    and
+    = link_to 'Istvan Hoka', 'http://twitter.com/ihoka'
+    
+  %h4 How do I let you know how ( awesome, crazy ) this is?
+  
+  %p Tweet to us, or send an email to support @ bddcasts.com (or jschoolcraft or ihoka @ bddcasts.com)
