--- a/app/views/pages/show/about.html.haml
+++ b/app/views/pages/show/about.html.haml
@@ -21,6 +21,16 @@
     %li Product web site
     %li Keywords (ex. kids party planning)
     
+  %h4 How was it built?
+  
+  %p 
+    It was built in ruby on rails.  We pair programmed (virtually) throughout the processed, used BDD to drive the site from features and used
+    = link_to 'Cucumber', 'http://cukes.info'
+    and
+    = link_to 'rspec', 'http://rspec.info'
+    to do BDD.  We recorded the process, you can check it out at
+    = link_to 'BDDCasts.com', 'http://bddcasts.com'
+    
   %h4 Who's responsible for this?
   
   %p
