--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
           .account
             %ul
               - if current_user
+                %li= link_to "My account", edit_account_path
                 %li= link_to "Sign out", user_session_path, :method => 'delete'
               - else
                 %li= link_to "Login", new_user_session_path
