--- a/app/views/brands/index.html.haml
+++ b/app/views/brands/index.html.haml
@@ -32,7 +32,7 @@
         %tr
           %td{:colspan => 4}
             No results.
-  = will_paginate @results, :prev_label => '&laquo; Newer', :next_label => 'Older &raquo;'
+  = will_paginate @results, :previous_label => '&laquo; Newer', :next_label => 'Older &raquo;'
 
 .grid_3
   #sidebar
