--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
       #header
         .grid_12
           %h1#hero
-            = link_to 'Brandizzle', root_path
+            = link_to 'Brandizzle', brands_path
           .account
             %ul
               - if current_user
