--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 %html
   %head
     %title Brandizzle
-    = stylesheet_link_tag '960', 'reset', 'text', 'master', 'formtastic', :media => 'screen'
+    = stylesheet_link_tag '960', 'reset', 'text', 'master', 'formtastic', 'formtastic_changes', :media => 'screen'
   %body
     .container_12
       #header
