rewrote all migrations; renamed search model and all dependencies to query; added has many through associations between brand and query and between query and result, instead of has_and_belongs_to_many; specced new models, fixed failing specs and features

--- a/app/views/brands/edit.html.haml
+++ b/app/views/brands/edit.html.haml
@@ -8,20 +8,20 @@
 .clear
 
 .grid_6
-  - form_for [@brand, @search] do |f|
+  - form_for [@brand, @query] do |f|
     %fieldset
-      %legend Searches
+      %legend Queries
     
       = f.text_field :term
       = f.submit 'Add term'
       
       %hr
       
-      %ul#searches
-        - @brand.searches.each do |search|
+      %ul#queries
+        - @brand.queries.each do |query|
           %li
-            =h search.term
-            = link_to "Remove", brand_search_path(@brand, search), :method => :delete, :id => dom_id(search, :delete), :class => 'delete'
+            = h query.term
+            = link_to "Remove", brand_query_path(@brand, query), :method => :delete, :id => dom_id(query, :delete), :class => 'delete'
   
 .grid_6
   - form_for @brand do |f|
