--- a/app/views/brands/new.html.haml
+++ b/app/views/brands/new.html.haml
@@ -1,5 +1,10 @@
-.grid_12
+.grid_6
   %h2 Add brand
+
+.grid_6.right
+  #actions
+    = link_to "Go back", brand_results_path
+.clear
 
 .grid_6
   - form_for @brand do |f|
