--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -8,3 +8,5 @@
       = f.input :password_confirmation
     - f.buttons do
       = f.commit_button "Update information"
+      or
+      = link_to "Cancel", brand_results_path
