--- a/public/stylesheets/sass/_tools.sass
+++ b/public/stylesheets/sass/_tools.sass
@@ -1,3 +1,14 @@
+.clearfix:after
+  :content "."
+  :display block
+  :height 0
+  :clear both
+  :visibility hidden
+.clearfix
+  :display inline-block
+.clearfix
+  :display block
+  
 .right
   :text-align right
 
