--- a/public/stylesheets/sass/master.sass
+++ b/public/stylesheets/sass/master.sass
@@ -89,6 +89,7 @@ html, body
     li
       :list-style none
       :float left
+      :color #ffffff
     a
       :color #ffffff
       :text-decoration none
