added jquery; added autofocus on the query term input field and on the new brand input field

--- a/app/views/brands/edit.html.haml
+++ b/app/views/brands/edit.html.haml
@@ -33,3 +33,9 @@
 
       %p
         = f.submit 'Update'
+
+- content_for :head do
+  :javascript
+    $(document).ready(function(){
+      $("#query_term").focus();
+    });
