--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,8 @@
   %head
     %title Brandizzle
     = stylesheet_link_tag '960', 'reset', 'text', 'master', 'formtastic', 'formtastic_changes', :media => 'screen'
+    = javascript_include_tag 'jquery-1.4.1', 'application'
+    = yield :head
   %body
     .container_12
       = render "shared/header"
