--- a/public/stylesheets/sass/master.sass
+++ b/public/stylesheets/sass/master.sass
@@ -36,6 +36,12 @@ html, body
 
 #filters
   :margin-bottom 1em
+  ul
+    :margin-left 10px
+    li
+      :list-style none
+      :float left
+      :margin 0 30px 0 0
 
 #actions
   form, a
