--- a/public/stylesheets/sass/_form.sass
+++ b/public/stylesheets/sass/_form.sass
@@ -15,3 +15,8 @@ fieldset
   legend
     :background-color white
     :padding 0 3px
+
+#new_user
+  .formError
+    :color #CC0000
+    :margin 0 0 0.5em 25%
