added tabs, and changed the layout

--- a/app/stylesheets/partials/_pagination.sass
+++ b/app/stylesheets/partials/_pagination.sass
@@ -1,7 +1,7 @@
 .pagination
-  :background white
   :position relative
-  :margin-left 20%
+  :padding 3px 0
+  :margin-left 25%
   a, span
     :padding .2em .5em
     :display block
