--- a/app/stylesheets/partials/_tools.sass
+++ b/app/stylesheets/partials/_tools.sass
@@ -18,3 +18,26 @@
 .center
   :text-align center
 
+=rounded(!radius = 5px)
+  :border-radius = !radius
+  :-moz-border-radius = !radius
+  :-webkit-border-radius = !radius
+  
+  
+  border-top-left-radius
+  
+=rounded-top(!radius = 5px)
+  :border-top-left-radius = !radius
+  :-moz-border-radius-topleft = !radius
+  :-webkit-border-top-left-radius = !radius
+  :border-top-right-radius = !radius
+  :-moz-border-radius-topright = !radius
+  :-webkit-border-top-right-radius = !radius
+  
+=rounded-bottom(!radius = 5px)
+  :border-bottom-left-radius = !radius
+  :-moz-border-radius-bottomleft = !radius
+  :-webkit-border-bottom-left-radius = !radius
+  :border-bottom-right-radius = !radius
+  :-moz-border-radius-bottomright = !radius
+  :-webkit-border-bottom-right-radius = !radius
