--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -4,7 +4,11 @@
 @import blueprint/modules/scaffolding.sass
 @import partials/tools.sass
 @import partials/flash.sass
+@import partials/header.sass
+@import partials/footer.sass
 @import partials/pagination.sass
+@import partials/results.sass
+@import partials/brands.sass
 
 // To generate css equivalent to the blueprint css but with your configuration applied, uncomment:
 // +blueprint
@@ -12,28 +16,40 @@
 //Recommended Blueprint configuration with scoping and semantic layout:
 +blueprint-typography("body.bp")
 +blueprint-scaffolding("body.bp")
+
 body.bp
   +blueprint-utilities
   +blueprint-debug
   +blueprint-interaction
-  // Remove the scaffolding when you're ready to start doing visual design.
-  // Or leave it in if you're happy with how blueprint looks out-of-the-box
-form.bp
+  +blueprint-grid
   +blueprint-form
+  :margin 1px 0
+  :background-color #DDD
+  
 
-// Page layout can be done using mixins applied to your semantic classes and IDs:
-body.three-col
-  #container
-    +container
-  #header, #footer
-    +column(!blueprint_grid_columns)
+.container
+  +container
+
+body.bp
+  #page
+    :margin-top 20px
   #sidebar
-    // One third of the grid columns, rounding down. With 24 cols, this is 8.
-    !sidebar_columns = floor(!blueprint_grid_columns / 3)
+    !sidebar_columns = floor(!blueprint_grid_columns / 4)
     +column(!sidebar_columns)
+    .inner
+      :border 1px solid #000
   #content
-    // Two thirds of the grid columns, rounding up.
-    // With 24 cols, this is 16.
-    !content_columns = ceil(2 * !blueprint_grid_columns / 3)
-    // true means it's the last column in the row
+    !content_columns = ceil(3 * !blueprint_grid_columns / 4)
     +column(!content_columns, true)
+    .inner
+      :min-height 300px
+  
+  .inner
+    :background-color #FFF
+    :padding 5px
+    +rounded
+    +clearfix
+    
+  a, a:visited
+    :color #105CB6
+    
