--- a/app/views/brands/edit.html.haml
+++ b/app/views/brands/edit.html.haml
@@ -1,38 +1,46 @@
-.grid_6
-  %h2=h @brand.name
+#sidebar
+  .inner
+    %h3 Monitored brands
+    %ul
+      - current_user.brands.each do |brand|
+        %li= link_to h(brand.name), edit_brand_path(brand)
 
-.grid_6.right
-  #actions
-    = link_to "Go back", brand_results_path
-    = button_to "Delete brand", brand_path(@brand), :method => :delete, :class => "delete", :confirm => "Are you sure you want to delete '#{@brand.name}' brand?"
-
-.clear
-
-.grid_6
-  - form_for [@brand, @query] do |f|
-    %fieldset
-      %legend Queries
+#content
+  .inner
+    .span-9
+      %h2=h @brand.name
+    .span-9.last
+      = link_to "Go back", brands_path, :class => "back_link"
+    .clear
     
-      = f.text_field :term
-      = f.submit 'Add term'
+    %h4 Settings
+    .span-9
+      - semantic_form_for @brand do |f|
+        - f.inputs do
+          = f.input :name
       
-      %hr
-      
+          %li
+            = f.submit 'Update'
+    .span-9.last.right
+      = button_to "Delete brand", brand_path(@brand), :method => :delete, :class => "delete", :confirm => "Are you sure you want to delete '#{@brand.name}' brand?"
+    .clear
+    
+    %h4 Queries
+    .span-9
+      - semantic_form_for [@brand, @query] do |f|
+        - f.inputs do
+          = f.input :term
+          %li
+            = f.submit 'Add term'
+    
+    .span-9.last
       %ul#queries
         - @brand.queries.each do |query|
           %li
             = h query.term
             = link_to "Remove", brand_query_path(@brand, query), :method => :delete, :id => dom_id(query, :delete), :class => 'delete', :confirm => "Are you sure you want to delete '#{query.term}' term?"
-  
-.grid_6
-  - form_for @brand do |f|
-    %fieldset
-      %legend Settings
-    
-      = render :partial => 'fields', :locals => { :f => f }
 
-      %p
-        = f.submit 'Update'
+
 
 - content_for :head do
   :javascript
