--- a/app/views/invitations/new.html.haml
+++ b/app/views/invitations/new.html.haml
@@ -1,9 +1,9 @@
-.grid_12
+.inner
   %h2 Invite your friends
   
-.grid_6
-  - semantic_form_for @invitation do |f|
-    - f.inputs do
-      = f.input :recipient_email, :label => "Friend's email address"
-    - f.buttons do
-      = f.commit_button "Invite!"
+  .span-12
+    - semantic_form_for @invitation do |f|
+      - f.inputs do
+        = f.input :recipient_email, :label => "Friend's email address"
+      - f.buttons do
+        = f.commit_button "Invite!"
