--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,14 +1,14 @@
-.grid_12
+.inner
   %h2 Register for an account
   
-.grid_6
-  - semantic_form_for @user do |f|
-    - f.inputs do
-      = f.hidden_field :invitation_token
-      = f.error_message_on :invitation_id
-      = f.input :login
-      = f.input :email
-      = f.input :password
-      = f.input :password_confirmation
-    - f.buttons do
-      = f.commit_button "Create my account"
+  .span-12
+    - semantic_form_for @user do |f|
+      - f.inputs do
+        = f.hidden_field :invitation_token
+        = f.error_message_on :invitation_id
+        = f.input :login
+        = f.input :email
+        = f.input :password
+        = f.input :password_confirmation
+      - f.buttons do
+        = f.commit_button "Create my account"
